[Foundation] Fix slider rendering on mobile

--- a/client/styles/prismic.css
+++ b/client/styles/prismic.css
@@ -1,5 +1,5 @@
-@import "./colors.css";
-@import "./components.css";
+@import './colors.css';
+@import './components.css';
 
 @custom-media --more-then-700 (width > 700px);
 
@@ -20,11 +20,11 @@
 }
 
 :global(.primary-text) {
-    color: var(--primary)
+    color: var(--primary);
 }
 
 :global(.secondary-text) {
-    color: var(--secondary)
+    color: var(--secondary);
 }
 
 :global(.read-more-link a) {
@@ -59,22 +59,28 @@
     & > a {
         display: inline-block;
         min-width: 150px;
-        padding: 1em;
-        margin-top: 1em;
-        font-size: 1em;
+        padding: 0.75em;
+        margin-top: 0.75em;
+        font-size: 0.75em;
         font-weight: 700;
         color: white;
-        background-color: var(--primary);
         text-transform: uppercase;
+        background-color: var(--primary);
 
         &:hover {
             background-color: color(var(--primary) blackness(15%));
         }
 
         &:after {
-            content: "\00a0›";
+            content: '\00a0›';
             color: white;
             font-size: 1.25em;
+        }
+
+        @media (--more-then-700) {
+            padding: 1em;
+            margin-top: 1em;
+            font-size: 1em;
         }
     }
 }
@@ -83,22 +89,28 @@
     & > a {
         display: inline-block;
         min-width: 150px;
-        padding: 1em;
-        margin-top: 1em;
-        font-size: 1em;
+        padding: 0.75em;
+        margin-top: 0.75em;
+        font-size: 0.75em;
         font-weight: 700;
         color: white;
-        background-color: var(--brand-secondary);
         text-transform: uppercase;
+        background-color: var(--brand-secondary);
 
         &:hover {
             background-color: color(var(--brand-secondary) blackness(15%));
         }
 
         &:after {
-            content: "\00a0›";
+            content: '\00a0›';
             color: white;
             font-size: 1.25em;
+        }
+
+        @media (--more-then-700) {
+            padding: 1em;
+            margin-top: 1em;
+            font-size: 1em;
         }
     }
 }
@@ -106,7 +118,8 @@
 :global(.android-branding-store) {
     position: relative;
     line-height: 40px;
-    background: url(https://developer.android.com/images/brand/en_generic_rgb_wo_45.png) no-repeat;
+    background: url(https://developer.android.com/images/brand/en_generic_rgb_wo_45.png)
+        no-repeat;
     background-size: 140px 40px;
     width: 140px;
     height: 40px;
@@ -122,7 +135,8 @@
 :global(.apple-branding-store) {
     position: relative;
     line-height: 40px;
-    background: url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;
+    background: url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg)
+        no-repeat;
     background-size: 140px 40px;
     width: 140px;
     height: 40px;
@@ -138,7 +152,7 @@
 :global(.static-page-youth) {
     & main {
         & div:not(:last-child) ul:not([class]) {
-            @media(--more-then-700) {
+            @media (--more-then-700) {
                 column-count: 2;
                 column-gap: 5em;
             }
@@ -161,7 +175,8 @@
             list-style: none;
             padding-left: 0;
 
-            & > li > strong, a {
+            & > li > strong,
+            a {
                 font-size: 1.15em;
             }
         }
@@ -195,9 +210,9 @@
 
 :global(.static-page-mountain-information-network-overview) {
     & main > div:not([class]) {
-        &  > div:not([class]):nth-child(2),
-        &  > div:not([class]):nth-child(3),
-        &  > div:not([class]):nth-child(4) {
+        & > div:not([class]):nth-child(2),
+        & > div:not([class]):nth-child(3),
+        & > div:not([class]):nth-child(4) {
             display: flex;
             align-items: center;
             & figure {
